<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intoWelcome"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="44sp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/introText"
            android:textColor="@color/colorGrayLight"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/continueButton1"
        android:layout_marginBottom="-10dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."
            android:layout_margin="3dp"
            android:textSize="50sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."
            android:textAlignment="center"
            android:layout_margin="3dp"
            android:textColor="@color/colorGrayLight"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."
            android:layout_margin="3dp"
            android:textColor="@color/colorGrayLight"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>


    <Button
        android:id="@+id/continueButton1"
        style="@style/SecondaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/rounded_additem_button"
        android:text="@string/continuePhrase" />


</RelativeLayout>