<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            style="@style/title"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ваши данные"
            android:textColor="@color/colorGray" />

        <TextView
            style="@style/subtitle"
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Возраст"
            android:textColor="@color/colorGray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ageHandler"
                style="@style/inputFiled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="4dp"
                android:ems="3"
                android:hint="0"
                android:inputType="number"
                android:maxEms="3"
                android:maxLength="3"
                android:text=""
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:text="@string/ageType"
                android:textColor="@color/colorGrayLight"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            style="@style/subtitle"
            android:layout_marginTop="16dp"
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Рост"
            android:textColor="@color/colorGray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/heightHandler"
                style="@style/inputFiled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="4dp"
                android:ems="3"
                android:hint="0"
                android:maxLength="3"
                android:inputType="number"
                android:maxEms="3"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:text="@string/heigthType"
                android:textColor="@color/colorGrayLight"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            style="@style/subtitle"
            android:layout_marginTop="16dp"
            android:id="@+id/stepRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Длинна шага"
            android:textColor="@color/colorGray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/stepRangeHandler"
                style="@style/inputFiled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="4dp"
                android:ems="3"
                android:hint="0"
                android:maxLength="3"
                android:inputType="number"
                android:maxEms="3"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:text="@string/lengthStepType"
                android:textColor="@color/colorGrayLight"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            style="@style/subtitle"
            android:layout_marginTop="16dp"
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Вес"
            android:textColor="@color/colorGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/weightHandler"
                style="@style/inputFiled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="4dp"
                android:ems="3"
                android:hint="0"
                android:maxLength="3"
                android:inputType="number"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:text="@string/weightType"
                android:textColor="@color/colorGrayLight"
                android:textSize="14sp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/continueButton2"
        android:layout_marginBottom="-10dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."
            android:layout_margin="3dp"
            android:textColor="@color/colorGrayLight"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."
            android:textAlignment="center"
            android:layout_margin="3dp"
            android:textSize="50sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."
            android:layout_margin="3dp"
            android:textColor="@color/colorGrayLight"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/continueButton2"
        style="@style/SecondaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/rounded_additem_button"
        android:text="@string/continuePhrase" />


</RelativeLayout>